# libSocketHandler

./: CMakeLists.txt  README.md
src/: SocketClient.cpp  SocketClient.hpp  SocketDef.hpp  SocketServer.cpp  SocketServer.hpp
tests/: CMakeLists.txt  TestsSockerHandler.cpp
